# dali_triton

./: .gitignore  CMakeLists.txt  client.py  config.pbtxt  main.cpp  myoperation.cu  myoperation.h  readme.txt  run.sh
